# dltlyse

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.github_flow  README.md  mypy.ini  pyproject.toml  requirements.txt  run-dltlyse  setup.cfg  setup.py  tox.ini
.github/workflows/: dltlyse-ci.yaml  python-dlt-ci.yaml
dltlyse/: run_dltlyse.py
dltlyse/core/: analyser.py  plugin_base.py  report.py  utils.py
dltlyse/core/tests/: test_analyser.py  test_call_backs_and_report_plugin.py  test_plugin_report.py  test_python_data_to_xml.py
dltlyse/plugins/: context.py  extract_files.py  sys_errors.py  sysmem_plugin.py
src/dltlyse/: mock_dlt_message.py  run_dltlyse.py
src/dltlyse/core/: analyser.py  plugin_base.py  report.py
src/dltlyse/plugins/: extract_files.py
tests/: system_tests.py
tests/unittests/: test_analyser.py  test_call_backs_and_report_plugin.py  test_plugin_report.py  test_python_data_to_xml.py
tests/unittests/plugins/: helpers.py
